audit_quests.txt
   Compiling astraweave-quests v0.4.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-quests)
error[E0432]: unresolved import `astraweave_llm::MockLlmClient`
   --> astraweave-quests\src\llm_quests.rs:717:9
    |
717 |     use astraweave_llm::MockLlmClient;
    |         ^^^^^^^^^^^^^^^^-------------
    |         |               |
    |         |               help: a similar name exists in the module: `LlmClient`
    |         no `MockLlmClient` in the root

error[E0432]: unresolved import `astraweave_rag::MockRagPipeline`
   --> astraweave-quests\src\llm_quests.rs:718:9
    |
718 |     use astraweave_rag::MockRagPipeline;
    |         ^^^^^^^^^^^^^^^^---------------
    |         |               |
    |         |               help: a similar name exists in the module: `RagPipeline`
    |         no `MockRagPipeline` in the root

error[E0432]: unresolved import `astraweave_llm::MockLlmClient`
   --> astraweave-quests\src\systems.rs:504:9
    |
504 |     use astraweave_llm::MockLlmClient;
    |         ^^^^^^^^^^^^^^^^-------------
    |         |               |
    |         |               help: a similar name exists in the module: `LlmClient`
    |         no `MockLlmClient` in the root

error[E0432]: unresolved import `astraweave_rag::MockRagPipeline`
   --> astraweave-quests\src\systems.rs:505:9
    |
505 |     use astraweave_rag::MockRagPipeline;
    |         ^^^^^^^^^^^^^^^^---------------
    |         |               |
    |         |               help: a similar name exists in the module: `RagPipeline`
    |         no `MockRagPipeline` in the root

For more information about this error, try `rustc --explain E0432`.
error: could not compile `astraweave-quests` (lib test) due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
